Summary For Sparky CSS
Sparky CSS inputs added

--- a/pastor_sparky.html
+++ b/pastor_sparky.html
@@ -2,7 +2,9 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<title>Sparky the Sun Devil</title>		
+		<meta name="author" content="Daniela Pastor">
+		<title>Sparky the Sun Devil</title>
+		<link href="pastor_sparky_style.css" rel="stylesheet">	
 	</head>
 
 	<body>
